--- a/eco/index.html
+++ b/eco/index.html
@@ -31,13 +31,14 @@
   </div>
   <div id="headerBar">
     <div>
-      <a href="../style/" title="style"><img src="" alt="style"> eco</a>
+      <a href="../eco/" title="eco"><img src="" alt="eco"> eco</a>
     </div>
   </div>
 </header>
 <main class="flex import_Data">
 
 <div id="links" class="img16">
+  <a href="https://school.4fresh.ru/blog/sredstva-bytovoy-khimii/">sredstva-bytovoy-khimii</a><br>
   мусор выносить не в пакете, а в ведре до мусоропровода или помойки: -1 пакет в день <br>
   ходить в магазин со своей сумкой <br>
   пакеты для весового товара заменить на мешочки из ткани <br>
