--- a/index.html
+++ b/index.html
@@ -34,25 +34,44 @@ margin-bottom: .5rem;
   <td><a><img src="icons/favicon.ico" alt="home"></a></td><td></td>
 </tr>
 <tr>
-  <td><a href="sailing/" title="sailing"><img src="icons/sailing.png" alt="sailing"></a></td><td><a href="sailing/"> Паруса</a></td></tr>
+  <td><a href="sailing/" title="sailing"><img src="icons/sailing.png" alt="sailing"></a></td>
+  <td><a href="sailing/"> Паруса</a></td></tr>
 <tr>
-  <td><a href="programming/#programming" title="programming"><img src="icons/programing.png" alt="programming"></a></td><td><a href="programming/#programming"> Программирование</a></td></tr>
+  <td><a href="programming/#programming" title="programming"><img src="icons/programing.png" alt="programming"></a></td>
+  <td><a href="programming/#programming"> Программирование</a></td></tr>
 <tr>
-  <td><a href="flamenco/" title="flamenco"><img src="icons/flamenco.png" alt="flamenco"></a></td><td><a href="flamenco/"> Фламенко</a></td></tr>
+  <td><a href="flamenco/" title="flamenco"><img src="icons/flamenco.png" alt="flamenco"></a></td>
+  <td><a href="flamenco/"> Фламенко</a></td></tr>
 <tr>
-  <td><a href="zdorovie/" title="Здоровье"><img src="icons/zdorovie.png" alt="Здоровье"></a></td><td><a href="zdorovie/"> Здоровье</a></td></tr>
+  <td><a href="zdorovie/" title="Здоровье"><img src="icons/zdorovie.png" alt="Здоровье"></a></td>
+  <td><a href="zdorovie/"> Здоровье</a></td></tr>
 <tr>
-  <td><a href="Skateboard/" title="Лонгбординг"><img src="icons/skateboarding.png" alt="skateboarding"></a></td><td><a href="Skateboard/"> Скейтборд</a></td></tr>
+  <td><a href="Skateboard/" title="Лонгбординг"><img src="icons/skateboarding.png" alt="skateboarding"></a></td>
+  <td><a href="Skateboard/"> Скейтборд</a></td></tr>
 <tr>
-  <td><a href="surf/" title="Серфинг"><img src="icons/surf.png" alt="surf"></a></td><td><a href="surf/"> Сёрфинг</a></td></tr>
+  <td><a href="surf/" title="Серфинг"><img src="icons/surf.png" alt="surf"></a></td>
+  <td><a href="surf/"> Сёрфинг</a></td></tr>
 <tr>
-  <td><a href="guitar/" title="Guitar"><img src="icons/guitar.png" alt="guitar"></a></td><td><a href="guitar/"> Гитара</a></td></tr>
+  <td><a href="guitar/" title="Guitar"><img src="icons/guitar.png" alt="guitar"></a></td>
+  <td><a href="guitar/"> Гитара</a></td></tr>
 <tr>
-  <td><a href="13century/" title="13century"><img src="icons/medieval.png" alt="13century"></a></td><td><a href="13century/"> 13й Век</a></td></tr>
+  <td><a href="13century/" title="13century"><img src="icons/medieval.png" alt="13century"></a></td>
+  <td><a href="13century/"> 13й Век</a></td></tr>
 <tr>
-  <td><a href="linguistics/" title="Языкознание"><img src="" alt=""></a></td><td><a href="linguistics/"> Языкознание</a></td></tr>
+  <td><a href="linguistics/" title="Языкознание"><img src="" alt=""></a></td>
+  <td><a href="linguistics/"> Языкознание</a></td></tr>
 <tr>
-  <td><a href="style/" title="Стиль"><img src="" alt=""></a></td><td><a href="style/"> Стиль</a></td></tr>
+  <td><a href="style/" title="Стиль"><img src="" alt=""></a></td>
+  <td><a href="style/"> Стиль</a></td></tr>
+<tr>
+  <td><a href="eco/" title="Экология"><img src="" alt=""></a></td>
+  <td><a href="eco/"> Экология</a></td></tr>
+<tr>
+  <td><a href="libre/" title="free"><img src="" alt=""></a></td>
+  <td><a href="libre/"> libre</a></td></tr>
+<tr>
+  <td><a href="family/" title="family"><img src="" alt=""></a></td>
+  <td><a href="family/"> family</a></td></tr>
 
 <!-- <a href="F1_Challenge/" title="formula 1"><img src="icons/f1.png" alt="formula 1"></a> -->
 <!-- <a href="Alpinism/" title="alpinisme"><img src="icons/alpinism.png" alt="alpinisme"></a> -->
