--- a/programming/css.html
+++ b/programming/css.html
@@ -94,6 +94,9 @@ console.log(styles.select, styles.loading);
 
 <div>
 <details><summary>animation / transition</summary><pre><code>
+  для анимирования лучше : 
+  opacity, transform, filter
+  
 a {
   animation: slidein 3s linear 1s infinite running;
   animation-name: name;
@@ -536,8 +539,6 @@ postcss-nesting
 </div>
 
 <div>
-  для анимирования лучше : <br>
-  opacity, trasform, filter <br>
 <details><summary><b>Селектор</b> { свойство: значение; }</summary><pre><code>
 * {} для всех элементов веб-страницы
 tagName по тегу
