--- a/programming/database.html
+++ b/programming/database.html
@@ -37,6 +37,7 @@ DELETE FROM articles WHERE title = '' AND views = 0;
 
 <div><h2>MySQL</h2>
 	<a href="https://youtu.be/N3THJnbwlLI">СУБД MySQL - Павел Пушкарев. 2014</a><br>
+	<a href="https://www.mamp.info/en/downloads/">MAMP</a> / phpMyAdmin <br>
 </div>
 
 <div><h2>GraphQL</h2>
