--- a/programming/webpack.html
+++ b/programming/webpack.html
@@ -20,7 +20,8 @@ npm i -D webpack webpack-cli webpack-dev-server
 npm i -D html-webpack-plugin
 npm i -D clean-webpack-plugin // delete old files in dist
 npm i -D style-loader css-loader
-npm i -D file-loader // для картинок и шрифтов
+npm install svg-inline-loader --save-dev // svg
+npm install file-loader --save-dev // для картинок и шрифтов
 npm i normalize.css // кроссбраузерность
 npm i -D xml-loader
 npm i -D csv-loader papaparse
@@ -194,8 +195,16 @@ module.exports = {
                 use: cssLoaders('sass-loader')
             },
             { // img
-                test: /\.(png|jpg|svg|gif)$/,
-                use: ['file-loader']
+                test: /\.(png|jpe?g|gif)$/i,
+                use: [
+                  {
+                    loader: 'file-loader',
+                  },
+                ],
+            },
+            { // svg
+                test: /\.svg$/,
+                loader: 'svg-inline-loader'
             },
             { // fonts
                 test: /\.(ttf|woff|woff2|eot)$/,
