--- a/sailing/index.html
+++ b/sailing/index.html
@@ -212,6 +212,7 @@ nav > a { font-size: inherit }
 <div>
   <details>
     <summary>Ссылки</summary><div id="links" class="img16">
+<a href="https://paper-models.ru/journals/item/shipyard-38-kliper-berbice-1780">paper-models.ru</a><br>
 <a href="https://sailingtime.ru/yahting-videouroki">yahting-videouroki</a><br>
 <a href="http://www.rusyf.ru" title="Всероссийская Федерация Парусного Спорта"><img src="https://rusyf.ru/assets/new/favicons/favicon-7b47a1a1bcad5e3feeac3e982f155f0a.ico" alt="rusyf"> ВФПС</a> <br>
 <a href="http://www.sailing.org" title="International Sailing Federation"><img src="http://www.sailing.org/favicon.ico" alt="sailing.org"> ISAF</a> <br>
