--- a/eco/index.html
+++ b/eco/index.html
@@ -38,6 +38,9 @@
 <main class="flex import_Data">
 
 <div id="links" class="img16">
+  <a href="https://www.consultant.ru/document/cons_doc_LAW_304017/">Федеральный закон "Об органической продукции и о внесении изменений в отдельные законодательные акты Российской Федерации" от 03.08.2018 N 280-ФЗ</a><br>
+  <a href="https://www.komus.ru/ecotovary/l/">Комус - Эко-товары</a>
+  fermer.ru
   <a href="https://school.4fresh.ru/blog/sredstva-bytovoy-khimii/">sredstva-bytovoy-khimii</a><br>
   мусор выносить не в пакете, а в ведре до мусоропровода или помойки: -1 пакет в день <br>
   ходить в магазин со своей сумкой <br>
@@ -45,8 +48,11 @@
   обувь покупать только кожаную долговечную <br>
   одежду из натуральных материалов <br>
   посуда: металл, керамика или дерево (шейкер, контейнер, зубная щетка, бутылочка для воды)<br>
-</div>
 
+</div>
+<div><h3>Земля</h3>
+  <li><a href="https://jur-prav.ru/kak-poluchajut-uchastki-pod-senokoshenie.html">Как получают участки под сенокошение</a></li>
+</div>
 </main>
 
 <footer></footer>
