--- a/libre/index.html
+++ b/libre/index.html
@@ -39,6 +39,9 @@
 
 <div id="links" class="img32">
 <a href="https://mega.nz/"><img src="../icons/mega.svg" alt=""></a>
+<a href="https://www.twirpx.com/">twirpx</a>
+<a href="https://peertube.su/c/libretrack_nof/videos?s=1">libretrack_nof</a>
+<a href="https://telegra.ph/">telegra.ph</a>
 </div>
 <div>
   <ul>
@@ -77,6 +80,7 @@ P2P
     </li>
   </ul>
 </div>
+
 </main>
 
 <footer></footer>
