--- a/linguistics/index.html
+++ b/linguistics/index.html
@@ -24,7 +24,10 @@
 </header>
 
 <main class="flex import_Data">
-
+<div class="links">
+    <li><a href="https://upload.wikimedia.org/wikipedia/commons/4/42/Das_Buch_der_Schrift_%28Faulmann%29_094.jpg">Faulmann</a></li>
+    <li><a href="https://archive.org/details/atextbooknorths00cookgoog/page/n452/mode/2up">A Text-book of North-Semitic Inscriptions: Moabite, Hebrew, Phoenician, Aramaic, Nabataean . 1903</a></li>
+</div>
     <div>
         <h3>Грузинский</h3>
         <a href="../linguistics/gruzin.jpg" data-lightbox="1" data-title=""><img src="../linguistics/gruzin-200.jpg"></a>
@@ -34,7 +37,7 @@
     <div id="links">
         <a href="https://www.youtube.com/playlist?list=PLJE3p5f_2oQ5HO-5s8GkPLOwEOUccCFxC">Арабский алфавит (Po-ArabskiRU)</a><br>
     </div>
-
+<div></div>
 
 </main>
 
