--- a/programming/golang.html
+++ b/programming/golang.html
@@ -3,6 +3,24 @@
     <img src="https://golang.org/favicon.ico" alt="Golang"></a></div>
 
 	<div id="links">
+    <a href="https://habr.com/ru/company/vk/blog/314804/">50 оттенков Go: ловушки, подводные камни и распространённые ошибки новичков</a><br>
+    <a href="https://www.youtube.com/watch?v=9Pk7xAT_aCU&list=PLrCZzMib1e9q-X5V9pTM6J0AemRWseM7I">Курс "Программирование на Go" / Технострим Mail.ru Group</a><br>
+    <a href="https://habr.com/ru/company/oleg-bunin/blog/461935/">Как работать с Postgres в Go: практики, особенности, нюансы</a><br>
+    Донован Алан А. А., Керниган Брайан У. Язык программирования Go <br>
+    Цукалос М. Golang для профи. Работа с сетью, многопоточность, структуры данных и машинное обучение с Go <br>
+    Клеппан М. Высоконагруженные приложения. Программирование, масштабирование, поддержка <br>
+    Ньюмен С. Создание микросервисов <br>
+    Ния Н., Гвен Ш. Apache Kafka. Потоковая обработка и анализ данных <br>
+    <a href="https://wdesert.notion.site/Let-My-Gophers-Go-29d7e8fe712141cf8ac39b84350f0db7">Список полезных ресурсов для изучения Go</a><br>
+    OpenAPI Swagger (Swaggo) <br>
+    Mock <br>
+    Каналы <br>
+    Способы взаимодействия REST и gRPC <br>
+    Паттерны Two-phase commit и Saga <br>
+    Асинхронное взаимодействие <br>
+    <br>
+    <a href="https://stackoverflow.com/questions/51460418/http-request-r-formvalue-returns-nothing-map">http-request-r-formvalue-returns-nothing-map</a><br>
+    <a href="https://tube.cthd.icu/watch?v=sy7toh7U04o&list=PL0lO_mIqDDFXXqMzFOIGIb7FOprmUQ_tt&index=9">kypc</a><br>
 		<a href="https://golang.org/">Golang.org</a><br>
 		<a href="https://youtu.be/53ULpInm988">Почему GO?</a><br>
 		<a href="https://youtu.be/2fxNbhy2gt0">Плюсы и минусы Go</a>, <a href="https://ater.me/conf/techtrain2018.pdf">презентация</a><br>
