--- a/programming/html.html
+++ b/programming/html.html
@@ -11,6 +11,7 @@
     <a href="http://htmlbook.ru/samhtml"><img src="http://htmlbook.ru/favicon.ico" alt="htmlbook"></a>
     <a href="https://schema.org/docs/gs.html"><img src="https://schema.org/docs/favicon.ico" alt="schema"></a><br>
     <a href="https://developers.google.com/web/">dev.google</a><br>
+    <a href="https://ogp.me/">Open Graph protocol</a><br>
     <a href="https://webref.ru">WebRef</a><br>
     <a href="https://vk.com/doc166724508_450973233?hash=e71c58d38f7ececc49&dl=64797a3026e3009efb">Пилгрим-М.-Погружение-в-HTML5-2011.djvu 5.6 МБ</a><br>
       <a href="http://webmaster.alexanderklimov.ru/html/svg.php">svg</a><br>
