--- a/programming/net.html
+++ b/programming/net.html
@@ -20,5 +20,18 @@
 	localhost === 127.0.0.1 <br>
 	adguardteam/DNSProxy , DNS over HTTPS <br>
 	<a href="https://yewtu.be/watch?v=42yg7nBrlGs">Большой заговор DNS</a><br>
-	
+	Лондонская интернет-биржа LINX (London Internet Exchange Network) <br>
+	LINX объединяет сети более 950 различных операторов и является одним из крупнейших в Европе сетевых хабов с пиковым на текущий момент трафиком 6,89 Тбит/с. <br>
+	точки международного обмена трафиком <br>
+	<br>
+	биллинговая система NetUp UTM5 <br>
+</div>
+
+<div>
+	<pre><code>
+ping yandex.ru -t
+ipconfig /all
+tracert yandex.ru
+Nslookup yandex.ru
+	</code></pre>
 </div>
