--- a/programming/programming.html
+++ b/programming/programming.html
@@ -40,7 +40,7 @@
 	<a href="#rxjs">RxJS</a><br>
 		<!-- <img src="https://rxjs-dev.firebaseapp.com/assets/images/logos/logo.png" alt="RxJS" title="RxJS"></a> -->
 	<a href="#safety">Safety</a><br>
-	<a href="#social">Social</a>
+	<a href="#social">Social</a><br>
 	<a href="#tests">Tests</a><br>
 	<a href="#typescript">TypeScript</a><br>
 		<!-- <img src="../icons/typescript.svg" alt="typescript" title="typescript"></a> -->
@@ -53,6 +53,7 @@
 
 <div>
 	<ul>
+		<li><a href="https://help.ubuntu.ru/wiki/nano">nano</a></li>
 		<li><details><summary>Vim</summary>
 			<pre><code>
 vim fileName
@@ -92,6 +93,8 @@ ack // умный поиск
 			<details><summary>Shell</summary>
 				<pre><code>
 <a href="https://andreyex.ru/">andreyex</a>
+<a href="https://www.debian.org/doc/manuals/debian-handbook/short-remedial-course.ru.html">debian-handbook</a>
+
 pwd // показывает текущее местоположение в файловой системе
 mkdir folder  // создаем папку
 rmdir folder // удаляем папку
@@ -132,6 +135,10 @@ traceroute -q www.mit.edu
 	<a href="https://www.youtube.com/c/HolyJS/videos"><img src="https://holyjs-moscow.ru/assets/images/logo-gradient.svg" alt="HolyJS"></a>
 	<a href="https://www.youtube.com/c/FrontendChannel/videos"><b style="height: 32px; width: 32px; background: #f7db00; font-size: 20px; color: #000; text-align: end; line-height: 49px;">FC</b></a>
 	<br>
+	<a href="https://yewtu.be/watch?v=CBqj_ezcBfo">BFF на NestJS – Калинина Александра</a><br>
+	<a href="https://dev.to/qiuzhi99/introduction-to-bff-and-nestjs-13mo">Introduction to BFF and NestJS</a><br>
+	<a href="https://habr.com/ru/company/first/blog/653771/">Простые сайты снова в моде. Минимализм возвращается</a><br>
+	<a href="https://signup.cloud.oracle.com/?language=en">Oracle Cloud Free Tier</a><br>
 	<a href="https://youtu.be/NmGGcarGnqU">Автостопом по фронтенду, или Эволюция фреймворков</a><br>
 	<a href="https://youtu.be/F2B_rvHwz0g">Эффективное тестирование верстки / Максим Соснов (СКБ Контур)</a><br>
 	<a href="https://www.youtube.com/playlist?list=PLfbxrJr-t5mn1fAypCWIVKass-X7ru0iR">FrontendConf Moscow 2019</a><br>
@@ -277,6 +284,7 @@ traceroute -q www.mit.edu
 		<h2>design / Верстка</h2>
 		<ul>
 			capture a window on Mac (Shift, Command, 4, and Space bar)
+			<li><a href="https://ofont.ru/">ofont.ru</a></li>
 			<li><a href="https://tilda.cc/ru/madeontilda/#c=portfolio">Примеры дизайнов на тильде</a></li>
 			<li><a href="https://ledovskikh-pl.ru/">primer1</a> , <a href="http://kseniabelovaphoto.tilda.ws/"> primer2</a></li>
 				<li><a href="https://material-ui.com">Material-UI</a></li>
@@ -482,5 +490,6 @@ public class Home {
 	<a href="https://yadi.sk/d/vitPq1t5mS7rRQ">Kross. Сайт-портфолио в PSD</a><br>
 	<a href="https://drive.google.com/file/d/1ByXB1fYHiTXINFROvZ0mYdJpYOgoUsBO/">Лендинг курса по Customer Development. Макет для Figma.</a><br>
 	<a href="https://yadi.sk/d/aQDWvM_2L-wT9w">MilasTask Небольшая страничка-портфолио.</a><br>
-	<a href="https://yadi.sk/d/xO_d7Vg6iQmURw">Peridona Лендинг для серьёзных дел.</a><br>
+	<a href="https://yadi.sk/d/xO_d7Vg6iQmURw">Peridona Лендинг для серьёзных дел.</a><br><a href="https://cake.ru/">cake.ru</a><br>
+	<a href="https://hsworld.ru/systems">hsworld.ru</a><br>
 </div>
