--- a/auto/index.html
+++ b/auto/index.html
@@ -27,7 +27,34 @@
 </div>
 
 <div>
-  <li>Suzuki Wagon R Wide I . 1l 70лс</li>
+  <li>Volkswagen Golf III 1.9TDI 90hp,110hp,64hp,75hp 4.1-6.8l/100km 90-130тр</li>
+  <li><a href="https://www.drive2.ru/o/b/516816645616829209/">Проблемы и надежность двигателя 1.9 TDI (1Z, AHU, AFN)</a></li>
+  <li><a href="https://auto.ru/cars/volkswagen/used/engine-dizel/?year_from=1991&power_from=90&transmission=MECHANICAL&sort=price-asc">auto.ru</a></li>
+  <li>Suzuki Wagon R Wide I . 1l 70лс 6л/100км</li>
+  <li><a href="https://www.youtube.com/watch?v=vWtm5YVo_O4">Suzuki Wagon R+ (1998) Review</a></li>
+  <li>Toyota Carolla VII(E100) 1.3MT/73hp,80hp 5.8l/100km 130тр</li>
+  <li>Volkswagen Polo 1999 Res Mk3 1.0 50hp 5.9l/100km 130тр</li>
+  <li>Opel Astra G 1.7 MT diz 75hp,80hp 4.4l/100km от150тр</li>
+  <li>Peugeot 206 1.4 75hp 6.3l/100km 130тр</li>
+  <li>Volkswagen Sharan I 1.9TDI 90hp 6.6l/100km</li>
+
+  <li>Peugeot 206 1.4d/68hp,1.6d/109hp,2.0d/90hp 3.6-6.6l/100km</li>
+  <li>Opel Corsa 1.0 4.5l/100km 190тр</li>
+  <li>Skoda Rapid 1.2 90hp 5l/100km</li>
+  <li>Volkswagen Polo 2001 Mk4 1.2 54hp 5.8l/100km</li>
+  <li>Toyota Corolla E140 2010-14 1.6 </li>
+  <li>Henday Solaris 2010-14 1.6 5.9l/100km</li>
+
+  <li>Fiat Doblo 2000-05 1.3 MT 69hp 5.5l/100km</li>
+  <li>Opel Corsa 1.3 diz 95hp 3.2l/100km от300тр</li>
+  <li>Mersedes 1.5 diz 3.5l/100km</li>
+  <li>Citroen C4 Cactus (Peugeot 308) 1.6 BlueHDi diz 92hp 3.5l/100km</li>
+  <li>Kia Rio 1.1 diz 75hp 3.6l/100km</li>
+  <li>Seat Leon 1.6 diz 115hp 4l/100km</li>
+  <li>Ford Focus 1.5 diz 95hp 4.1l/100km</li>
+  <li>Volvo V40 Cross Country 2.0 diz 120hp 4l/100km</li>
+  <li>Skoda Octavia 2.0 TDI diz 4.1l/100km</li>
+  <li>Замена двигателя , СВАП</li>
 </div>
 
 </main>
