--- a/delo/index.html
+++ b/delo/index.html
@@ -26,12 +26,42 @@
 
 <div id="links">
   <li><a href="https://www.insales.ru/blogs/university">InSales</a></li>
-  <li><a href="https://www.moedelo.org/">Моё дело</a></li>
   <li><a href="https://rosreestr.gov.ru/">РосРеестр</a></li>
   <li><a href="https://mofmicro.ru/ru/">Мой бизнес микрозаймы для вашего бизнеса</a></li>
+  <li><a href="https://yewtu.be/watch?v=4q5sIAlHcyU">Мышление успешных людей. Брайан Трейси.</a></li>
+  <li><a href="https://www.wildberries.ru/seller/52218">Ptaho - WB</a></li>
+</div>
+
+<div>
+  <h2>Дела бумажные</h2>
+  <li><a href="https://www.moedelo.org/">Моё дело</a></li>
+  <li><a href="https://digital.gov.ru/ru/activity/govservices/1/">Аккредитация ИТ-компаний</a></li>
+  <li><a href="https://kkt-online.nalog.ru/">kkt-online.nalog.ru</a></li>
+  <li><a href="https://data.nalog.ru/create_business/ul/creation/">nalog.ru/create_business</a></li>
   <li><a href="https://yewtu.be/channel/UCPoUX9fdqATQG7VVPiSzCiA">Переводчик с бухгалтерского</a></li>
   <li><a href="https://tube.cthd.icu/channel/UCuHMA6ZFJtYQpbfNAGPOKTQ">Некторов, Савельев и Партнеры</a></li>
-  <li><a href="https://yewtu.be/watch?v=4q5sIAlHcyU">Мышление успешных людей. Брайан Трейси.</a></li>
+</div>
+
+<div>
+  <h2>Marketplaces</h2>
+  <li><a href="https://seller-edu.ozon.ru/docs/rfbs/">Ozon Продажа со своего склада (realFBS)</a></li>
+  <li><a href="https://seller-edu.ozon.ru/docs/contract-for-sellers/contract-for-sell-goods-on-ozon.html#%D1%80%D0%B0%D0%B7%D0%B4%D0%B5%D0%BB-%C2%AB%D1%82%D1%80%D0%B5%D0%B1%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-%D0%BA-%D1%82%D0%BE%D0%B2%D0%B0%D1%80%D1%83%C2%BB">contract-for-sell-goods-on-ozon</a></li>
+  <li><a href="https://seller-edu.ozon.ru/">База знаний маркетплейса —
+как продавать на Ozon</a></li>
+  <li><a href="https://calculator.ozon.ru/">calculator.ozon</a></li>
+</div>
+
+<div>
+  <h2>Логистика и склад</h2>
+  <li><a href="https://www.cdek.ru/ru">cdek</a></li>
+  <li><a href="https://boxberry.ru/">boxberry</a></li>
+  <li>lomond бумага самоклеющаяся а4</li>
+  <li><a href="https://www.komus.ru/katalog/upakovka-i-markirovka/korobki-kartonnye/gofrokarton-listovoj-i-v-rulonakh/karton-listovoj-buryj-gofrokarton-400kh600-mm-t-21-profil-v/p/1155871/">Картон листовой бурый (гофрокартон) 400х600 мм Т-21 профиль В</a></li>
+  <li><a href="https://www.komus.ru/katalog/upakovka-i-markirovka/-plenka-strejch-upakovochnaya/plenka-strejch-dlya-ruchnoj-upakovki/strejch-plenka-bagazhnaya-dlya-ruchnoj-upakovki-unibob-ves-0-23-kg-20-mkm-x-25-sm-kh-50-m/p/854632/?from=block-301-1">Стрейч-пленка багажная для ручной упаковки Unibob вес 0.23 кг 20 мкм x 25 см х 50 м</a></li>
+</div>
+
+<div>
+  <h2>Инвестиции</h2>
   <li>фильм Хэнк: 5 лет на краю</li>
   <li>фильм Китайское дело</li>
   <li><a href="http://cbr.ru/press/PR/?file=20102015_100129ik2015-10-20t10_01_03.htm">Об утверждении перечня системно значимых кредитных организаций</a></li>
@@ -40,17 +70,6 @@
   <li><a href="https://www.moex.com/ru/marketdata/#/mode=groups&group=4&collection=160&boardgroup=57&data_type=current">MOEX</a></li>
   <li><a href="https://alfabank.ru/make-money/investments/help/faq/"> Альфа-банк. Инвестиции. Вопросы и ответы</a></li>
   <li><a href="https://lk.alfadirect.ru/notifications">alfadirect</a></li>
-  <li>lomond бумага самоклеющаяся а4</li>
-  <li><a href="https://www.komus.ru/katalog/upakovka-i-markirovka/korobki-kartonnye/gofrokarton-listovoj-i-v-rulonakh/karton-listovoj-buryj-gofrokarton-400kh600-mm-t-21-profil-v/p/1155871/">Картон листовой бурый (гофрокартон) 400х600 мм Т-21 профиль В</a></li>
-  <li><a href="https://www.komus.ru/katalog/upakovka-i-markirovka/-plenka-strejch-upakovochnaya/plenka-strejch-dlya-ruchnoj-upakovki/strejch-plenka-bagazhnaya-dlya-ruchnoj-upakovki-unibob-ves-0-23-kg-20-mkm-x-25-sm-kh-50-m/p/854632/?from=block-301-1">Стрейч-пленка багажная для ручной упаковки Unibob вес 0.23 кг 20 мкм x 25 см х 50 м</a></li>
-  <li><a href="https://www.wildberries.ru/seller/52218">Ptaho - WB</a></li>
-  <li><a href="https://seller-edu.ozon.ru/docs/rfbs/">Ozon Продажа со своего склада (realFBS)</a></li>
-  <li><a href="https://seller-edu.ozon.ru/docs/contract-for-sellers/contract-for-sell-goods-on-ozon.html#%D1%80%D0%B0%D0%B7%D0%B4%D0%B5%D0%BB-%C2%AB%D1%82%D1%80%D0%B5%D0%B1%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-%D0%BA-%D1%82%D0%BE%D0%B2%D0%B0%D1%80%D1%83%C2%BB">contract-for-sell-goods-on-ozon</a></li>
-  <li><a href="https://seller-edu.ozon.ru/">База знаний маркетплейса —
-как продавать на Ozon</a></li>
-  <li><a href="https://digital.gov.ru/ru/activity/govservices/1/">Аккредитация ИТ-компаний</a></li>
-  <li><a href="https://kkt-online.nalog.ru/">kkt-online.nalog.ru</a></li>
-  <li><a href="https://data.nalog.ru/create_business/ul/creation/">nalog.ru/create_business</a></li>
 </div>
 
 <div>
@@ -68,7 +87,6 @@
       <li>УАЗ-буханка</li>
       <li>Земельный участок</li>
       <li>Улий/Пчёлы</li>
-      <li>Коза</li>
     </ol>
   </div>
 </div>
