--- a/programming/git.html
+++ b/programming/git.html
@@ -23,6 +23,10 @@
 </div>
 
 <pre><code>
+github
+    settings/Developer settings/Personal access tokens
+    Password: your_token
+
 git init    // Create an empty Git repository or reinitialize an existing one
 
 git status  // проверяем
